<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/Birth_year"
        android:autofillHints="name"
        android:id="@+id/tv1"
        android:inputType="number" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/Current_year"
        android:autofillHints="name"
        android:id="@+id/tv2"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/Birth_month"
        android:autofillHints="name"
        android:id="@+id/tv3"
        android:inputType="number"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/Current_month"
        android:autofillHints="name"
        android:id="@+id/tv4"
        android:inputType="number"
        />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:textSize="20sp"
           android:textColor="@color/black"
           android:id="@+id/edt1"
           android:text="@string/Result"
           />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
            android:id="@+id/edt2"
            android:text="@string/Result"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/edt3"
        android:text="@string/Result"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/edt4"
        android:text="@string/Result"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/edt5"
        android:text="@string/Result"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/edt6"
        android:text="@string/Result"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/edt7"
        android:text="@string/Result"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button"
        android:layout_marginTop="20dp"
        android:id="@+id/Result"
        />
</LinearLayout>